Add side and margin notes

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -14,6 +14,7 @@
     }
 }
 
+
 .aoc {
     background: #0f0f23;
     color: #cccccc;
@@ -31,5 +32,9 @@
         color: #ffffff;
         font-style: normal;
         text-shadow: 0 0 5px #ffffff;
+    }
+
+    p {
+        font-size: 14pt;
     }
 }
