--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -17,6 +17,7 @@
 
 .aoc {
     background: #0f0f23;
+    background-color: #0f0f23;
     color: #cccccc;
     font-family: "Source Code Pro", monospace;
     font-size: 14pt;
@@ -35,6 +36,7 @@
     }
 
     p {
+        background-color: #0f0f23;
         font-size: 14pt;
     }
 }
