--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -9,7 +9,7 @@
   {%- else -%}
     <link rel="stylesheet" href="{{ "/assets/tufte.css" | relative_url }}">
   {%- endif -%}
-  <script type="text/javascript" src="/assets/popups.js"></script>
+  <script type="text/javascript" src="/assets/wikipedia-popups.js"></script>
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
